
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUN 12a
  * in model/thermo/_generic/thermo.c
    - added species: C2H
  * in model/thermo/_generic/thermo.hh
    - added species: C2H to species map
  * in model/thermo/_generic/enthalpy.c
    - added Glenn polynomial coefficients for species: C2H
  * in model/transport/_Dixon-Lewis/transport.c
    - added transport properties for species: C2H
  * in model/thermo/_generic/thermo.c
    - added species C2H
      

2022 JUN 11a
  * in model/share/transport_share.c
    - added function _etac_from_rhok_Tk_muk()
  * moved
    - model/thermo/_generic/ref/SAND86-8246REV98.pdf
    - model/transport/_Dixon-Lewis/ref/NASA-TR-R-132.pdf
    - model/transport/_Dixon-Lewis/ref/SAND86-8246.pdf
    to model/transport/ref/
  * in model/transport/_Dixon-Lewis/transport.c
    - made modifications: now eta is found from the sum of etan and etac with etac
      found from _etac_from_rhok_Tk_muk()
  * in model/transport/doc/report.tex
    - added Gupta-Yos and Capitelli models
    - upgraded the Dixon-Lewis documentation
    - added Parent-Macheret model for the charged species
  

2022 JUN 07b
  * in model/share/transport_share.c
    - changed LNLAMBDA from LNLAMBDA_NRL to LNLAMBDA_RAIZER
    

2022 JUN 07a
  * in model/transport/_Gupta-Yos/transport.c
    - Added METHOD5 (same as METHOD4 but with the mobilities and charged species thermal conductivities
      obtained from the Parent-Macheret model)
    - in _epc(), added a max() to make sure that the returned epc is never below 1
  * in model/transport/_Dixon-Lewis/transport.c
    - deleted _mue_from_Nn_Ni_Te(), _mui_from_Nn_Ni_Ti(), _muk_from_rhok_T_Te_Ek(), 
      find_dmue_from_Nn_Ni_Te(), find_dmui_from_Nn_Ni_Ti(), find_dmuk_from_rhok_Tk_Ek() 