@@ -2,7 +2,7 @@
 
 kB=1.38e-23;
 Ce=1.602e-19;
-Te=8000;
+Te=4000;
 P=101300;
 N=P/kB/Te;
 
@@ -15,7 +15,7 @@ Ne=1.45e-3*N; {8000 K}
 Ne=8.74e-3*N; {9000 K}
 Ne=2.44e-2*N; {10000 K}
 
-Ne=3.22e-4*N; {7000 K}
+Ne=1.96e-6*N; 
 
 Nn=N-Ne*2;
 
